--- a/src/scss/structures/_nav-bar.scss
+++ b/src/scss/structures/_nav-bar.scss
@@ -113,7 +113,7 @@ Classes - Nav
 Nav Classes
  
 Markup:
-ul_none flex flex_row:md flex_column no_wrap justify_flex-end
+ul_none flex flex_row:md flex_column no_wrap
  
 Weight:1000
  
