Updates to Nav and Styles

--- a/src/scss/structures/_nav-barlight.scss
+++ b/src/scss/structures/_nav-barlight.scss
@@ -97,7 +97,7 @@ Classes - Nav Container
 Nav Container Classes
  
 Markup:
-bg_white font_2:lg font_0:md font_display sticky t_0 shadow_overlap-light 
+bg_white font_2:lg font_1:md font_display sticky t_0 shadow_overlap-light 
 
 Weight:1000
  
@@ -135,7 +135,7 @@ Classes - Link
 Description: 
  
 Markup:
-text-shadow_black-1 undecorated h:undecorated p-y_4 flex_auto text_center:lg
+text-shadow_black-1 undecorated h:undecorated p-y_4 p-x_3:md p-x_4 flex_auto text_center:lg
  
 Weight:1000
  
